프로젝트 컴파일 시작 위치를 main.ts로 변경.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dream",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/main.js"
   },
   "repository": {
     "type": "git",
